--------------------------------------------------------------
English DoliDroid ChangeLog
--------------------------------------------------------------

***** ChangeLog for 2.2 *****

2.247 - To release
- External links are now opened into the default web browser

2.246
- Better management of cache and back to page. No error on menu pages if not logged.
- Removed deprecated code of CookieSyncManager.
- Support the camera capture on input file of type accept (whatever is its value, not only "image/*")
- Support for multiple file submission.
- Clean code

2.244
- Https is now the default scheme for url without http(s)
- Add warning if you are not using a HTTPS web site.
- Fix download for some http web site protected with HTTP Basic.
- Fix troubles when there is a = or : into the password.
- Sort the list of past URL.

2.243
- Use checkboxes to select options.
- Add support for the bookmarks pages into DoliDroid menu (need Dolibarr v15+).
- Add support for the switch company page menu (need Dolibarr v15+).
- Url entry is not lost when leaving and going back on app.
- Can click on links into the About page.
- Can delete a saved predefined URL to connect to from list of saved URLs.


***** ChangeLog for 2.1 *****

2.141
- Disable cache for the quick search page because it is not compatible with CSRF protection
- Include static resources for v12


***** ChangeLog for 2.0 *****

2.039
- FIX a not null exception if url is null

2.037-2.0.38
- FIX Hang during access on menu.

2.036
- FIX Hang on some Android 8+ when downloading
- Restore ability to use with test sites (http)

2.035
- NEW Add static resources for v11
- NEW Add warning if bad scheme (http vs https) used.
- FIX Truncation of user agent in about page

2.0.34
- Compatibility with Multicompany module
- Fix open external URL
- Include asset cache files for better performance with Dolibarr 9.0 and 10.0
- Autofix url if url start with /


***** ChangeLog for 1.9 *****