@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     //buildToolsVersion '30.0.2'
 
     // API Level
     // 16=4.1 17=4.2 19=4.4.2
-    // 21=5.0.0 22=5.1.1 23=6.0.0 (android M, need permission requests) 24=7.0.0 26=8.0.0 29=10.0.0 -->
+    // 21=5.0.0 22=5.1.1 23=6.0.0 (android M, need permission requests)
+    // 24=7.0.0 26=8.0.0 29=10.0.0 30=11.0.0 31=12.0.0
     defaultConfig {
         applicationId "com.nltechno.dolidroidpro"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
     }
 
     buildTypes {
