@@ -60,7 +60,8 @@
         </activity>
 
         <!-- Define a broadcastreceiver -->
-        <receiver android:name="com.nltechno.dolidroidpro.DownloadBroadcastReceiver">
+        <receiver android:name="com.nltechno.dolidroidpro.DownloadBroadcastReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
             </intent-filter>
